[KULRICE-7731] Fix for horizontal scroll in lightbox

--- a/web/src/main/webapp/krad/css/global/base.css
+++ b/web/src/main/webapp/krad/css/global/base.css
@@ -238,6 +238,10 @@ img.uif-disclosure-image {
 
 /** Group specific styles *******************************************************************************/
 
+.uif-page{
+    margin-right: 10px;
+}
+
 .uif-group > .uif-instructionalMessage, .uif-group > .uif-disclosureContent > .uif-instructionalMessage,
 .uif-page > .uif-instructionalMessage, .uif-page > .uif-disclosureContent > .uif-instructionalMessage {
     max-width: 64em;
@@ -342,7 +346,7 @@ div.clearfix:after {
     content: ".";
     display: block;
     height: 0;
-    width: 0;
+    width: auto;
     clear: both;
     visibility: hidden;
 }
